objects/EventLog__e.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovtLimitInExecutingCode__c</fullName>
        <label>Govt Limit In Executing Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedToRecord__c</fullName>
        <label>Related To Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Log</label>
    <pluralLabel>Event Log</pluralLabel>
</CustomObject>